# fincol

./: .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  README.md  aggregation_updater.py  blobtest.py  conftest.py  csv_io.py  dividend_loader.py  domain.py  fincol.py  fincol_io.py  fincol_math.py  fincol_test_cli.py  function_app.py  input_symbols.csv  input_symbols.json  json_io.py  pyproject.toml  requirements.txt  yf_cli.py  yfinance_client.py
.cursor/: CURSOR.md
.github/: CODEOWNERS
.github/workflows/: auto-assign-pr-author.yml  python-app.yml  python-code-checks-and-test.yml  to_function_app_fincol-fa.yml
application/: aggregation_updater.py  dividend_loader.py  iyahoo_finance.py
cache/: dividend_history.csv  tickers.csv  ttm_income.csv
cache/aggregations/: dividends_by_year.csv  last_dividend_decrease.csv  ttm_income.csv  years_consecutive_dividend_increase.csv  years_since_dividend_decrease.csv
domain/: ticker_snapshot.py
infrastructure/: csv_io.py  json_io.py  yfinance_client.py
src/application/: aggregation_updater.py  debug_utils.py  dividend_loader.py  fincol_math.py  iyahoo_finance.py
src/cache/: dividend_history.csv  tickers.csv
src/domain/: fincol_io.py  iticker_snapshot.py  ticker_snapshot.py
src/infrastructure/: __init__.py  csv_azblob_io.py  csv_io.py  csv_symbol_loader.py  json_io.py  yfinance_client.py
src/infrastructure/csv/: __init__.py  azblob_io.py  io.py
src/presentation_cli/: __init__.py  fincol.py  fincol_test_cli.py  yf_cli.py
test/: aggregation_updater_test.py  architecture_test.py  constants.py  csv_io_test.py  dividend_loader_test.py  fincol_math_test.py  fincol_test.py  yfinance_client_test.py
test/testcache/: tickers.csv
test/testcache/aggregations/: last_dividend_decrease.csv  ttm_income.csv  years_since_dividend_decrease.csv
test/testinputs/: bns_divs.csv
