[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fincol"
version = "0.1.0"
description = "Command-line tools for loading Yahoo Finance dividend data and maintaining CSV-backed financial caches."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.17",
    "azure-storage-blob>=12.20",
    "numpy>=1.26",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "black>=25.11",
    "isort>=5.13",
    "pytest>=8.0",
]

[project.scripts]
fincol = "presentation_cli.fincol:main"
fincol_test_cli = "presentation_cli.fincol_test_cli:main"
yf-cli = "presentation_cli.yf_cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
target-version = ["py314"]

[tool.isort]
profile = "black"
src_paths = ["src", "test"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["*_test.py"]
pythonpath = ["src"]
