[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fincol"
version = "0.1.0"
description = "Command-line tools for loading Yahoo Finance dividend data and maintaining CSV-backed financial caches."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "azure-identity>=1.17",
    "azure-storage-blob>=12.20",
    "numpy>=1.26",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "archunitpython>=1.1",
    "black>=25.11",
    "flake8>=7.0",
    "isort>=5.13",
    "mypy>=1.11",
    "pandas-stubs>=2.2",
    "pytest>=8.0",
]

[project.scripts]
fincol = "presentation_cli.fincol:main"
fincol_test_cli = "presentation_cli.fincol_test_cli:main"
yf-cli = "presentation_cli.yf_cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
target-version = ["py314"]

[tool.isort]
profile = "black"
src_paths = ["src", "test"]

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
explicit_package_bases = true
warn_unused_configs = true
files = ["src"]

[[tool.mypy.overrides]]
module = "yfinance.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["*_test.py", "constants.py"]
pythonpath = ["src"]
